commit tree d4184eb75499bfd45f65b0c2f1f632d808bf0443

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Redux Initial Dispatch Example</title>
 </head>
 <body>
-  
+  <button onclick="dispatch({ type: 'INCREASE_COUNT'})">Click Me</button>
+  <div id="counter"></div>
   <script src="js/reducer.js"></script>
 </body>
 </html>
